fixed delete item function (changed pop to splice method)

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
     </section>
     <br />
     <section id="employeeTableOut">
-        <table class="container">
-            <thead>
+        <table class="table">
+            <thead class="thead-dark">
                 <tr>
-                    <td>First Name</td>
-                    <td>Last Name</td>
-                    <td>ID</td>
-                    <td>Title</td>
-                    <td>Annual Salary</td>
-                    <td></td>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Annual Salary</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody id="employeeOut">
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Add a First Name!</td>
+                    <td>Add a Last Name</td>
+                    <td>Add an ID #!</td>
+                    <td>Add a Title!</td>
+                    <td>Add a Salary!</td>
                     <td></td>
                 </tr>
             </tbody>
